--- a/config.yml
+++ b/config.yml
@@ -24,5 +24,5 @@ websites:
     - Ring Fit Game Stop:
         url: https://www.gamestop.com/video-games/switch/games/products/ring-fit-adventure/11097187.html
         xpath: //div[@class='availability-msg']//div
-        original: This item is currently not available online
+        original: THIS ITEM IS CURRENTLY NOT AVAILABLE ONLINE
 
