--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,10 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         IFTTT_EVENT: ${{ secrets.IFTTT_EVENT }}
         IFTTT_KEY: ${{ secrets.IFTTT_KEY }}
+    - name: serverless invoke
+      uses: dschep/serverless-python-action@master
+      with:
+        args: invoke -f differ
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
