--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,7 @@
 events:
     - schedule: rate(2 hours)
 
-websites:    
-    - chewy:
-        url: https://www.chewy.com/arm-hammer-litter-multi-cat-slide/dp/140856
-        xpath: //div[@id='pricing']//ul[@class='product-pricing']//li[@class='our-price']//p[@class='price']//span
-        original: $14.99        
+websites:      
     - 搬瓦工:
         url: https://bwh88.net/cart.php?a=add&pid=72
         xpath: //div[@id='order-web20cart']//h1
@@ -19,7 +15,7 @@ websites:
     - Ring Fit Target:
         url: https://www.target.com/p/ring-fit-adventure-nintendo-switch/-/A-76593324
         xpath: //div[@data-test='oosDeliveryOption']
-        original: Not available
+        original: Temporarily out of stock
         
     - Ring Fit Game Stop:
         url: https://www.gamestop.com/video-games/switch/games/products/ring-fit-adventure/11097187.html
