--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        IFTTT_EVENT: ${{ secrets.IFTTT_EVENT }}
-        IFTTT_KEY: ${{ secrets.IFTTT_KEY }}
+        PUSHBULLET_ACCESS_TOKEN: ${{ secrets.PUSHBULLET_ACCESS_TOKEN }}
+        PUSHBULLET_DEVICE_IDEN: ${{ secrets.PUSHBULLET_DEVICE_IDEN }}
     - name: serverless invoke
       uses: dschep/serverless-python-action@master
       with:
