--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,11 @@ websites:
         url: https://www.xiuluohost.com/product/zj-nat
         xpath: //div[@class='pricing-tables-wrap']//a[@href='/dashboard/confirm/56']
         original: 已售罄
+    
+    - AkkoCloud:
+        url: https://www.akkocloud.com/cart.php?a=add&pid=13
+        xpath: //div[@clash='header-lined']//h1
+        original: 缺货
         
     - Canon EF 50mm f/1.4 USM Lens:
         url: https://www.bhphotovideo.com/c/product/12140-USA/Canon_2515A003_50mm_f_1_4_USM_Autofocus.html
