--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,7 @@ websites:
         xpath: //div[@data-id='ProductInformation']//div[@data-id='PriceContainer']//span
         original: $598
 
-    - French Laundry
+    - French Laundry:
         url: https://www.exploretock.com/tfl/
         xpath: //h3[@class='MuiTypography-root OfferingsStatusMessage-heading jss5 jss42 jss21 MuiTypography-body1']
         original: Reservations are unavailable
